@@ -1,7 +1,8 @@
 Package: firmware-linux
 Architecture: all
 Depends: firmware-linux-free, firmware-linux-nonfree (= ${binary:Version})
+Recommends: intel-microcode, amd64-microcode
 Description: Binary firmware for various drivers in the Linux kernel (meta-package)
- This package depends on both free and non-free firmware which was
- previously included in the Linux kernel.
+ This package depends on both free and non-free firmware which may
+ be used with drivers in the Linux kernel.
 
